@@ -1,0 +1,3 @@
+use strict;
+use warnings;
+BEGIN { kill 9, $$ };
